--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.3",
-    "node": "^21.6.2"
+    "express-session": "^1.18.0",
+    "fs": "^0.0.1-security",
+    "mongoose": "^8.2.0",
+    "node": "^21.6.2",
+    "path": "^0.12.7"
   }
 }
