--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "fs": "^0.0.1-security",
     "mongoose": "^8.2.0",
     "node": "^21.6.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "qrcode": "^1.5.3"
   }
 }
