--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
-    "mongoose": "^8.2.0",
+    "mongoose": "^8.2.1",
+    "multer": "^1.4.5-lts.1",
     "node": "^21.6.2",
     "path": "^0.12.7",
     "qrcode": "^1.5.3"
