--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
+    "firebase-admin": "^12.0.0",
     "fs": "^0.0.1-security",
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
