--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^7.8.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.3",
@@ -23,10 +25,13 @@
     "mongoose": "^8.2.1",
     "multer": "^1.4.5-lts.1",
     "node": "^21.6.2",
+    "node-fetch": "^3.3.2",
     "path": "^0.12.7",
     "qrcode": "^1.5.3",
     "sharp": "^0.33.2",
     "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "uuid": "^9.0.1",
     "ws": "^8.16.0"
   }
 }
